--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=opqbbfwV&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nK8coMwJ'>NICE Careers - Software Engineer - .NET Full Stack</a></h5> 
+<p><span class="badge badge-light">Austin, Texas  Austin, TX</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932423'>Job Application for Full Stack Developer at Traeger Wood Pellet Grills</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
@@ -80,7 +84,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qRzaVfwf&k=Job&j=odKlafwc&__jvst=Employee&__jvsd=sY27chw5&__jvsc=Twitter&bid=nIy3nMwX'> Plutora Careers - Full Stack .Net Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qRzaVfwf&k=Job&j=odKlafwc&__jvst=Employee&__jvsd=sY27chw5&__jvsc=Twitter&bid=nIy3nMwX'> Plutora Careers - Full Stack .Net Developer</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -112,7 +116,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oZyQafwh&__jvst=Employee&__jvsd=sOJTqgwB&__jvsc=Twitter&bid=nPbPnMwt'>Freedom Financial Network Careers - Full Stack Developer (Platform)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oZyQafwh&__jvst=Employee&__jvsd=sOJTqgwB&__jvsc=Twitter&bid=nPbPnMwt'>Freedom Financial Network Careers - Full Stack Developer (Platform)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -124,7 +128,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/oasysinternationalcorporation89/jobs/1935507'>Job Application for Senior Full-Stack Developer at Oasys International Corporation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/oasysinternationalcorporation89/jobs/1935507'>Job Application for Senior Full-Stack Developer at Oasys International Corporation</a></h5> 
 <p><span class="badge badge-light">Washington, D.C.</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -136,7 +140,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://quaero.applytojob.com/apply/tUeNa2avJT/Full-Stack-Developer'>Full Stack Developer - Quaero - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quaero.applytojob.com/apply/tUeNa2avJT/Full-Stack-Developer'>Full Stack Developer - Quaero - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... Apply to Full Stack Developer at Quaero in Bengaluru, Karnataka, India.</p>
 <hr/>
@@ -191,11 +195,11 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">Gurugram, Haryana</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1917995'>Job Application for Principal Full Stack Engineer at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1917995'>Job Application for Principal Full Stack Engineer at Coupang</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/si/jobs/1936788'>Job Application for Senior Full-Stack Software Engineer at SimplyInsured</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/si/jobs/1936788'>Job Application for Senior Full-Stack Software Engineer at SimplyInsured</a></h5> 
 <p><span class="badge badge-light">San Francisco  United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -239,7 +243,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/stratus/jobs/full-stack-developer-ciVAEe9p0r6y1GaKjNoogA'>Full Stack Developer #0542 job at Stratus Solutions in Herndon, Virginia , powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/stratus/jobs/full-stack-developer-ciVAEe9p0r6y1GaKjNoogA'>Full Stack Developer #0542 job at Stratus Solutions in Herndon, Virginia , powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Herndon, Virginia Herndon, Virginia Reston, Virginia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -284,7 +288,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light">San Francisco  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oWXebfw2&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nYIemMwx'>DNEG Careers - Full Stack Developer (IMS)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oWXebfw2&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nYIemMwx'>DNEG Careers - Full Stack Developer (IMS)</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India  Mumbai</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -320,7 +324,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/pond5/dc8e85cb-fe5b-4bf3-9b0a-41175a21da2f'>Pond5 - Full Stack Software Engineer (WordPress)</a></h5> 
+<h5><a href='https://jobs.lever.co/pond5/dc8e85cb-fe5b-4bf3-9b0a-41175a21da2f'>Pond5 - Full Stack Software Engineer (WordPress)</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -344,11 +348,11 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light">Toronto, ON, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://perdoo.join.com/jobs/456639-full-stack-web-engineer-f-m-div'>Job @ Perdoo (Remote): Full Stack Web Engineer (f/... | JOIN</a></h5> 
+<h5><a href='https://perdoo.join.com/jobs/456639-full-stack-web-engineer-f-m-div'>Job @ Perdoo (Remote): Full Stack Web Engineer (f/... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.42jobs.io/laravel/jobs/8423-stage-ou-cdi-developper-full-stack-laravel-react'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/laravel/jobs/8423-stage-ou-cdi-developper-full-stack-laravel-react'>
 Stage ou CDI - D?velopper Full Stack Laravel / React at LEMON LEARNING in Paris | Laravel jobs | 42jobs.io
 
 </a></h5> 
@@ -369,7 +373,7 @@ Remote Ruby on Rails Full-Stack Developer - US Only at Health eFilings | Rails j
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/react/jobs/8413-full-stack-engineer'>
+<h5><a href='https://www.42jobs.io/react/jobs/8413-full-stack-engineer'>
 Full Stack Engineer at Coda in San Francisco | React jobs | 42jobs.io
 
 </a></h5> 
@@ -383,7 +387,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/inrix/job/o8epbfwG'>INRIX Careers - Full Stack Software Development Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/inrix/job/o8epbfwG'>INRIX Careers - Full Stack Software Development Engineer</a></h5> 
 <p><span class="badge badge-light">Kirkland, Washington</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -421,7 +425,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Burlington, MA  Boston</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/rcooo9r184xas467gqcshwohda'>Full Stack PHP Software Engineer | Strategic Employment</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/rcooo9r184xas467gqcshwohda'>Full Stack PHP Software Engineer | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -462,12 +466,6 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <h5><a href='https://apply.workable.com/pandell/j/D1A17EAA7C/'>Full Stack Web Developers - Pandell</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='https://linx.recruiterbox.com/jobs/fk03i2j/'>
-    Desenvolvedor Full Stack SR at Linx
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
 <hr/>
 
 
