--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -298,7 +298,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/51A347EF6E'>TechOp Solutions International - Jobs: Privacy Analyst - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/51A347EF6E'>TechOp Solutions International - Jobs: Privacy Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 19, 2019 ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
@@ -413,7 +413,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/privacy/'>Privacy Policy | Machine Learning Automation &amp; Data Analysis Software</a></h5> 
+<h5><a href='https://www.datarobot.com/privacy/'>Privacy Policy | Machine Learning Automation &amp; Data Analysis Software</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
@@ -425,11 +425,11 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1599092'>Job Application for Privacy Features Analyst at Magic Leap, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1599092'>Job Application for Privacy Features Analyst at Magic Leap, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumologic/jobs/1647428'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumologic/jobs/1647428'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-28</p>
 <hr/>
@@ -446,7 +446,7 @@ affect?...</p>
 <p>Apr 18, 2019 ... Description. The Company. RingCentral, Inc. (NYSE:RNG) is a leading provider 
 of global enterprise cloud communications and collaboration solutions.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
